--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,10 @@ version: '3'
 services:
   mysql:
     image: mysql:8.0.25
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: integration_test
-      MYSQL_DATABASE: integration_test
-      MYSQL_USER: integration_test
-      MYSQL_PASSWORD: integration_test
+      MYSQL_ROOT_PASSWORD: example
     ports:
       - 3306:3306
 
@@ -16,8 +14,6 @@ services:
     image: postgres:13.3
     restart: always
     environment:
-      POSTGRES_DB: integration_test
-      POSTGRES_USER: integration_test
-      POSTGRES_PASSWORD: integration_test
+      POSTGRES_PASSWORD: example
     ports:
       - 5432:5432
